# Outfit-AI

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
cache/: garments.json
frontend/: index.html
knowledge/: styling_rules.md
src/: api.py  context.py  decider.py  describer.py  main.py  model.py
